[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/construction/tower3.png" type="Texture" id=1]
[ext_resource path="res://actor/constuction/Tower.gd" type="Script" id=2]
[ext_resource path="res://actor/unit/animation_and_effect/healthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sound_effect/construction/cannon_sound.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 550.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 48.0

[sub_resource type="Animation" id=3]
resource_name = "construct_finished"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.45, 0.55, 0.6, 0.63, 0.7 ),
"transitions": PoolRealArray( 5.27802, 0.143587, 2.2974, 1, 2.73208, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 4.33681e-19, -2.38419e-07 ), Vector2( 0, -64 ), Vector2( 4.33681e-19, -2.38419e-07 ), Vector2( 0, -16 ), Vector2( 0, 0 ), Vector2( 4.33681e-19, -2.38419e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 3.73213, 1, 1 ),
"update": 0,
"values": [ Color( 0.172549, 0.172549, 0.172549, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.31, 0.45, 0.55, 0.6, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.1, 10.0, 12.0, -2.0, -2.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.36, 0.55, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0416834, 0.0250944 ), Vector2( 0.201681, 0.121417 ), Vector2( 0.184874, 0.111298 ), Vector2( 0.21478, 0.119185 ), Vector2( 0.201681, 0.121417 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("shadow:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.14902 ), Color( 0, 0, 0, 0.572549 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.301, 0.36, 0.45, 0.55, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -15.0, 15.0, 12.0, 4.0, 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.68 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_Process"
} ]
}

[node name="tower" type="StaticBody2D"]
position = Vector2( 0, -16 )
script = ExtResource( 2 )

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.572549 )
position = Vector2( -1.11764, 32.6618 )
scale = Vector2( 0.201681, 0.121417 )
texture = ExtResource( 1 )

[node name="range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.33681e-19, -2.38419e-07 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ReloadTime" type="Timer" parent="."]

[node name="bulletList" type="Node2D" parent="."]

[node name="AnimationConstruct" type="AnimationPlayer" parent="."]
anims/construct_finished = SubResource( 3 )

[node name="healthBar" parent="." instance=ExtResource( 3 )]

[node name="sound_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="ReloadTime" to="." method="_on_ReloadTime_timeout"]
